B-F Sandbox Full-Backup/src/objects/Project_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Chart__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|1|3|5|7|9|1:|Op+Pfit+Mgin|Payback+Timing|Capital+Expend|Strategic+Alignmt|Consumer+Fit|Market+Alignmt|Competitor+Defen&amp;chxr=0,0,10|1,-5,100&amp;chxs=1,676767,10.5,-0.5,l,676767&amp;chxt=y,x&amp;chs=850x250&amp;cht=lc&amp;chco=DA3B15,F7A10A,4582E7&amp;chds=0,10,0,10,0,10&amp;chd=t:3,6,7,4,3,2,9|4,7,8,3,2,7,5|8,9,7,6,8,8,7&amp;chg=-1,-1,1,3&amp;chls=1|1|1&amp;chtt=Achievement&quot;, &quot;Achievement Chart&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievement_Sum__c</fullName>
        <label>Achievement Sum</label>
        <summarizedField>Project_Prioritization__c.Achievement__c</summarizedField>
        <summaryForeignKey>Project_Prioritization__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <formula>Achievement_Sum__c / Ratings_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attractiveness_Chart__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|1|3|5|7|9|1:|Op+Pfit+Mgin|Payback+Timing|Capital+Expend|Strategic+Alignmt|Consumer+Fit|Market+Alignmt|Competitor+Defen&amp;chxr=0,0,10|1,-5,100&amp;chxs=1,676767,10.5,-0.5,l,676767&amp;chxt=y,x&amp;chs=850x250&amp;cht=lc&amp;chco=DA3B15,F7A10A,4582E7&amp;chds=0,10,0,10,0,10&amp;chd=t:1,3,3,1,5,4,8|3,5,6,7,5,4,2|7,8,5,8,9,6,4&amp;chg=-1,-1,1,3&amp;chls=1|1|1&amp;chtt=Attractiveness&quot;, &quot;Achievement Chart&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attractiveness Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attractiveness_Sum__c</fullName>
        <label>Attractiveness Sum</label>
        <summarizedField>Project_Prioritization__c.Attractiveness__c</summarizedField>
        <summaryForeignKey>Project_Prioritization__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attractiveness__c</fullName>
        <formula>Attractiveness_Sum__c / Ratings_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attractiveness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Project_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Branded Line Extension (Full &amp; Mid Proof)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NtW Mid-Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NtW  Full-Proof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratings_Submitted__c</fullName>
        <label>Ratings Submitted</label>
        <summaryForeignKey>Project_Prioritization__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Spend_Amount__c</fullName>
        <label>Spend Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Yr_NPV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>5 Yr NPV</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>Market__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IV0000000CnpCMAS_00NV0000000TAj7MAG</fullName>
        <active>true</active>
        <field>Project_Prioritization__c.Project__c</field>
        <filterItems>
            <field>Project_Opportunity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PM - New, PM - Evaluated, PM - Closed, PM - In Evaluation</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Project Prioritization Evaluation_Projec</name>
    </namedFilters>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>PM_Closed</fullName>
        <active>true</active>
        <description>This will remove the project from the dashboard and pipeline.</description>
        <label>PM - Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>PM_Evaluated</fullName>
        <active>true</active>
        <description>Once a project is marked &quot;Evaluated&quot;, it will show up on the Pipeline and Dashboard so it can be viewed alongside the other projects.</description>
        <label>PM - Evaluated</label>
    </recordTypes>
    <recordTypes>
        <fullName>PM_In_Evaluation</fullName>
        <active>true</active>
        <description>This will send a note to all the evaluators of the project with a link to submit their ratings.</description>
        <label>PM - In Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prioritization_Model</fullName>
        <active>true</active>
        <description>As part of the Stage Gate process this project will be evaluated by a team and loaded into a prioritization model for Senior Leadership to review.</description>
        <label>PM - New</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>